syntax = "proto3";
package snapper.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "git.softiron.com/sw/hc/snapper.git/gen/go/proto/snapper/v1;snapperv1";

service SnapperService {
  rpc ListStack(google.protobuf.Empty) returns (ListStackResponse) {}
  rpc ListStatus(google.protobuf.Empty) returns (stream ListStatusResponse) {}
  rpc ListArchiveSnapshots(google.protobuf.Empty) returns (stream ListArchiveSnapshotsResponse) {}
  rpc ListManualSnapshots(google.protobuf.Empty) returns (stream ListManualSnapshotsResponse) {}
  rpc ListRemoteSnapshots(google.protobuf.Empty) returns (stream ListRemoteSnapshotsResponse) {}
}

message ListStackResponse {
  string stack = 1;
}

message ListStatusResponse {
  string type = 1;
  uint64 id = 2;
  int64 instance = 3;
  string hypervisor = 4;
  string rbd = 5;
  optional google.protobuf.Timestamp scheduled = 6;
  optional google.protobuf.Timestamp started = 7;
  optional google.protobuf.Timestamp finished = 8;
  string schedule = 9;
  repeated int64 progress = 10;
}

message ListRemoteSnapshotsResponse {
  string tag = 1;
  string image = 2;
  int64 provisioned_size = 3;
  int64 used_size = 4;
}

message ListArchiveSnapshotsResponse {
  string tag = 1;
  string chain = 2;
  bool complete = 3;
  int64 used_size = 4;
}

message ListManualSnapshotsResponse {
  string name = 1;
  string tag = 2;
}
